--- a/src/AdminBundle/Resources/config/routing.yml
+++ b/src/AdminBundle/Resources/config/routing.yml
@@ -1,7 +1,9 @@
+# Home
 admin_home_index:
     path:     /
     defaults: { _controller: AdminBundle:Home:index }
 
+# Entity
 admin_entity_insert:
     path:     /entity/fetch/insert
     defaults: { _controller: AdminBundle:Entity:insert }
@@ -14,7 +16,26 @@ admin_entity_processFetch:
     path:     /entity/fetch/process
     defaults: { _controller: AdminBundle:Entity:processFetch }
 
+admin_entity_resetFetch:
+    path:     /entity/fetch/reset
+    defaults: { _controller: AdminBundle:Entity:resetFetch }
+
+# Graph
 admin_graph_index:
     path:     /graph
     defaults: { _controller: AdminBundle:Graph:index }
 
+admin_graph_remove:
+    path:     /graph/remove
+    defaults: { _controller: AdminBundle:Graph:remove }
+
+# EvaluationUser
+admin_evaluation_user_index:
+    path:     /users
+    defaults: { _controller: AdminBundle:EvaluationUser:index }
+
+admin_evaluation_user_view:
+    path:     /user/{user_id}
+    defaults: { _controller: AdminBundle:EvaluationUser:view }
+    requirements:
+        user_id: \d+
