--- a/src/APIBundle/Resources/config/routing.yml
+++ b/src/APIBundle/Resources/config/routing.yml
@@ -1,5 +1,6 @@
 api_user_remove:
-    path:     /api/user/remove/{user_id}
+    path:     /api/user/remove/{user_id}/{authtoken}
     defaults: { _controller: APIBundle:EvaluationUser:remove }
     requirements:
         user_id: \d+
+        authtoken: "JoaN4Qhzo2DemdQ4YDiLmK4QJjqmI294ii"
